dejacode/static/css/dejacode_bootstrap.css
/* ... */
[data-bs-theme=light] {
  --bs-link-color: #2e73d0;
  --bs-link-color-rgb: 46, 115, 208;
  --bs-link-hover-color: #0056b3;
  --bs-link-hover-color-rgb: 0, 86, 179;
}

/* -- Main -- */
body {
  padding-top: 4rem;
}
a {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
a.btn:hover,
a.dropdown-item:hover {
  text-decoration: none;
}
.fs-85pct {
  font-size: 85%;
}
.fs-110pct {
  font-size: 110%;
}
.header {
  margin-bottom: 1rem;
}
.header-body {
  padding-top: 0.5rem;
  padding-bottom: 1.0rem;
  border-bottom: 0.0625rem solid #e3ebf6;
}
.header-pretitle {
  letter-spacing: .08rem;
  text-transform: uppercase;
  color: var(--bs-light-text-emphasis);
  font-size: 0.625rem;
  margin-bottom: 0.5rem;
  font-weight: 500;
  line-height: 1.2;
}
.header-title {
  margin-bottom: 0;
  font-size: 1.625rem;
}
.smaller {
  font-size: 90%;
}
.mini {
  font-size: .675em;
}
code {
  color: #ac1459;
}
.fa, .fas, .far {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  height: 1rem;
  width: 1rem;
}
.btn.badge .fa, .btn.badge .fas, .btn.badge .far {
  height: initial;
  width: inherit;
}
.text-break-initial,
table.text-break thead {
  word-wrap: initial!important;
  word-break: initial!important;
}
.bg-warning-orange {
  background-color: var(--bs-orange);
}
.spinner-border-md {
  --bs-spinner-width: 1.5rem;
  --bs-spinner-height: 1.5rem;
  --bs-spinner-border-width: 0.2em;
}

/* -- Dark there fixes -- */
[data-bs-theme=dark] .btn-outline-dark {
  --bs-btn-color: var(--bs-tertiary-color);
  --bs-btn-border-color: var(--bs-tertiary-color);
  --bs-btn-hover-color: #fff;
  --bs-btn-hover-bg: var(--bs-tertiary-color);
  --bs-btn-hover-border-color: var(--bs-tertiary-color);
  --bs-btn-focus-shadow-rgb: 108, 117, 125;
  --bs-btn-active-color: #fff;
  --bs-btn-active-bg: var(--bs-tertiary-color);
  --bs-btn-active-border-color: var(--bs-tertiary-color);
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: var(--bs-tertiary-color);
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: var(--bs-tertiary-color);
  --bs-gradient: none;
}

/* -- Navbar -- */
.navbar {
  --bs-navbar-color: var(--bs-white);
  --bs-nav-link-color: var(--bs-white);
  --bs-nav-link-hover-color: var(--bs-white);
  --bs-navbar-hover-color: var(--bs-white);
  --bs-navbar-active-color: var(--bs-white);
  --bs-navbar-brand-color: var(--bs-white);
  --bs-navbar-brand-hover-color: var(--bs-white);
  --bs-navbar-padding-x: .5rem;
  --bs-navbar-padding-y: .375rem;
  background-color: var(--bs-djc-blue-bg);
  height: 54px;
}
.navbar-nav .active>.nav-link,
.navbar-nav .show>.nav-link
.navbar-nav .nav-link.active,
.navbar-nav .nav-link.show,
.navbar-nav .nav-link:hover {
  text-decoration: underline;
  text-underline-position: under;
  color: var(--bs-white);
}
.navbar #navbarCollapse.show {
  background-color: var(--bs-djc-blue-bg);
  padding: 0 1rem;
}
.navbar #search-input {
  color: var(--bs-white);
  background-color: rgba(0,0,0,0.25);
}
.navbar #search-input::placeholder {
  color: var(--bs-gray-300);
}
.navbar .notification-active {
  position: absolute;
  top: 5px;
  left: 25px;
  width: 10px;
  height: 10px;
  content: '';
  border-radius: 50%;
}

/* -- Pagination -- */
nav ul.pagination .disabled {
  --bs-pagination-disabled-bg: var(--bs-pagination-disabled-bg);
}

/* -- Back to Top link -- */
#back-to-top{
  position: fixed;
  bottom: 1.25rem;
  right: 1.25rem;
  cursor: pointer;
  display: none;
  text-decoration: none;
  border-radius: 2.1875rem;

}
#back-to-top:hover i {
  position: relative;
  color: var(--bs-black);
  top: -.4375rem;
}

/* -- clipboard.js -- */
.clipboard {
  position: relative;
}
.btn-clipboard,
.btn-expend {
  position: absolute;
  display: none;
  top: .375rem;
  right: 0;
  z-index: 10;
  color: var(--bs-body-color);
  cursor: pointer;
  background-color: transparent;
  border: 0;
}
dd .btn-clipboard {
  right: 1rem;
}
dd .btn-expend {
  right: 3.1rem;
}
.clipboard:hover .btn-clipboard,
.btn-clipboard:focus,
.clipboard:hover .btn-expend,
.btn-expend:focus {
  display: block;
}
.btn-clipboard:hover,
.btn-expend:hover {
  color: var(--bs-djc-blue-bg);
}
dd.reduced pre {
  max-height: 110px;
  overflow: scroll;
}
.tab-content pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

/* -- Footer -- */
.footer a {
  color: var(--bs-body-color);
  font-weight: 500;
}
.footer a:hover,
.footer a:focus {
    color: var(--bs-link-hover-color);
    text-decoration: underline;
}
.footer li {
  display: inline-block;
}
.footer li + li {
  margin-left: 1rem;
}

/* -- Homepage card layout -- */
@media (min-width:576px) {
  .card-deck.sm-gutter {
    margin-right: -0.5rem;
    margin-left: -0.5rem;
  }
  .card-deck.sm-gutter .card{
    margin-right: 0.5rem;
    margin-left: 0.5rem;
  }
}
.row.sm-gutter {
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}
.row.sm-gutter > .col {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

/* -- Object list table -- */
#object-list-table thead {
  position: sticky;
  top: 52px;
  z-index: 1;
  font-size: 0.875rem;
  box-shadow: 0 2px 0 var(--bs-border-color);
}
th.column-grouping {
  width: 36px;
  max-width: 36px;
}
th.column-selection {
  width: 27px;
  max-width: 27px;
}

/* -- Licenses List -- */
.licenses-table th.column-name {
  min-width: 200px;
}
.licenses-table th.column-usage_policy {
  width: 80px;
  min-width: 80px;
}
.licenses-table th.column-category {
  width: 125px;
  min-width: 125px;
}
.licenses-table th.column-category__license_type {
  width: 84px;
}
.licenses-table th.column-license_profile {
  min-width: 155px;
  width: 155px;
}
.licenses-table th[class*=' column-tag__'],
.licenses-table th[class^='column-tag__'] {
  width: 70px;
}

/* -- Owners List -- */
table.owners-table .column-type {
  width: 105px;
  max-width: 105px;
}

/* -- Components List -- */
table.components-table .column-name {
  min-width: 155px;
}
/* ... */

